nac3parser/src/snapshots/nac3parser__parser__tests__parse_list_comprehension.snap
---
source: nac3parser/src/parser.rs
assertion_line: 157
expression: parse_ast

---
Located {
    location: Location {
        row: 1,
        column: 1,
        file: FileName(
            "unknown",
        ),
    },
    custom: (),
    node: ListComp {
        elt: Located {
            location: Location {
                row: 1,
                column: 2,
                file: FileName(
                    "unknown",
                ),
            },
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 8,
                        file: FileName(
                            "unknown",
                        ),
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                        file: FileName(
                            "unknown",
                        ),
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: false,
            },
        ],
    },
}
