nac3parser/src/snapshots/nac3parser__parser__tests__parse_print_2.snap
---
source: nac3parser/src/parser.rs
assertion_line: 104
expression: parse_ast

---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
            file: FileName(
                "unknown",
            ),
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 6,
                    file: FileName(
                        "unknown",
                    ),
                },
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 1,
                            column: 1,
                            file: FileName(
                                "unknown",
                            ),
                        },
                        custom: (),
                        node: Name {
                            id: "print",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 8,
                                file: FileName(
                                    "unknown",
                                ),
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 22,
                                file: FileName(
                                    "unknown",
                                ),
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    Some(
                                        2,
                                    ),
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [],
                },
            },
            config_comment: [],
        },
    },
]
